--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
               name="menu-outline"
             ></ion-icon>
             <ul class="header__burger-ul">
+              <li class="header__burger-close">
+                <ion-icon name="close-outline"></ion-icon>
+              </li>
               <li class="header__li">Home</li>
               <li class="header__li">About Us</li>
               <li class="header__li">Team</li>
@@ -76,7 +79,168 @@
         <button class="main-block__button">READ MORE</button>
       </div>
     </div>
-    <div class="date-block"></div>
+    <div class="date-block">
+      <div class="container date-block__container-main">
+        <div class="date-block__left">
+          <div class="date-block__small">
+            <div class="date-block__small-title">2011</div>
+            <div class="date-block__small-text">
+              Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius
+              nec diam vitae hendrerit bigus mit.
+            </div>
+          </div>
+          <div class="date-block__small">
+            <div class="date-block__small-title">2013</div>
+            <div class="date-block__small-text">
+              Sed at auctor sem, nec tincidunt elit. Pellentesque enim turpis,
+              porttitor ac orci in, ultrices efficitur nisl. Ut odio libero,
+              sodales a tellus eleifend, suscipit dapibus mi.
+            </div>
+          </div>
+        </div>
+        <div class="date-block__center">
+          <div class="date-block__circle"></div>
+          <div class="date-block__circle"></div>
+          <div class="date-block__circle"></div>
+          <div class="date-block__circle"></div>
+        </div>
+        <div class="date-block__right">
+          <div class="date-block__small">
+            <div class="date-block__small-title">2012</div>
+            <div class="date-block__small-text">
+              Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius
+              nec diam vitae hendrerit bigus mit. Begitus vit urna nulla.
+            </div>
+          </div>
+          <div class="date-block__small">
+            <div class="date-block__small-title">2014</div>
+            <div class="date-block__small-text">
+              Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius
+              nec diam vitae hendrerit bigus mit. Begitus vit urna nulla.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container date-block__container-small">
+        <div class="date-block__small">
+          <div class="date-block__small-title">2011</div>
+          <div class="date-block__small-text">
+            Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius
+            nec diam vitae hendrerit bigus mit.
+          </div>
+        </div>
+        <div class="date-block__small">
+          <div class="date-block__small-title">2012</div>
+          <div class="date-block__small-text">
+            Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius
+            nec diam vitae hendrerit bigus mit. Begitus vit urna nulla.
+          </div>
+        </div>
+        <div class="date-block__small">
+          <div class="date-block__small-title">2013</div>
+          <div class="date-block__small-text">
+            Sed at auctor sem, nec tincidunt elit. Pellentesque enim turpis,
+            porttitor ac orci in, ultrices efficitur nisl. Ut odio libero,
+            sodales a tellus eleifend, suscipit dapibus mi.
+          </div>
+        </div>
+        <div class="date-block__small">
+          <div class="date-block__small-title">2014</div>
+          <div class="date-block__small-text">
+            Lorem ipsum dolor sit amet, consectetur adipiselit. Vivamus varius
+            nec diam vitae hendrerit bigus mit. Begitus vit urna nulla.
+          </div>
+        </div>
+      </div>
+      <img src="img/buildings-black.png" alt="" />
+    </div>
+    <div class="team-block">
+      <div class="container">
+        <div class="title">This is our team</div>
+        <div class="subtitle">We are small but effective and ...</div>
+        <div class="team-block__inner">
+          <div class="team-block__persone">
+            <div class="team-block__img">
+              <img src="img/team-img-1.png" alt="" />
+            </div>
+            <div class="team-block__name">Mark Once</div>
+            <div class="team-block__position">
+              Designer & Front-End Developer
+            </div>
+            <div class="team-block__social-media">
+              <img src="img/twitter.png" alt="" />
+              <img src="img/instagram.png" alt="" />
+            </div>
+          </div>
+          <div class="team-block__persone">
+            <div class="team-block__img">
+              <img src="img/team-img-2.png" alt="" />
+            </div>
+            <div class="team-block__name">Justin Twice</div>
+            <div class="team-block__position">Founder & CEO</div>
+            <div class="team-block__social-media">
+              <img src="img/twitter.png" alt="" />
+              <img src="img/instagram.png" alt="" />
+            </div>
+          </div>
+          <div class="team-block__persone">
+            <div class="team-block__img">
+              <img src="img/team-img-3.png" alt="" />
+            </div>
+            <div class="team-block__name">Antonio Never</div>
+            <div class="team-block__position">Someone & Somewhere</div>
+            <div class="team-block__social-media">
+              <img src="img/twitter.png" alt="" />
+              <img src="img/instagram.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="provide-block">
+      <div class="container">
+        <div class="provide-block__back-img">
+          <img src="img/provide-ba.png" alt="" />
+        </div>
+        <div class="title">We provide you everything</div>
+        <div class="subtitle">
+          Maybe not everything, but we provide you some stuff.
+        </div>
+        <div class="provide-block__inner">
+          <div class="provide-block__small">
+            <div class="provide-block__small-img">
+              <img src="img/graf.png" alt="" />
+            </div>
+            <div class="provide-block__small-name">Some Analytics</div>
+            <div class="provide-block__small-text">
+              Aenean nisi lectus, convallis non lorem sit amet, rhoncus
+              malesuada justo
+            </div>
+          </div>
+          <div class="provide-block__small">
+            <div class="provide-block__small-img">
+              <img src="img/love.png" alt="" />
+            </div>
+            <div class="provide-block__small-name">We provide you love</div>
+            <div class="provide-block__small-text">
+              Aenean nisi lectus, convallis non lorem sit amet, rhoncus
+              malesuada justo
+            </div>
+          </div>
+          <div class="provide-block__small">
+            <div class="provide-block__small-img">
+              <img src="img/tree.png" alt="" />
+            </div>
+            <div class="provide-block__small-name">And Some Cloud</div>
+            <div class="provide-block__small-text">
+              Aenean nisi lectus, convallis non lorem sit amet, rhoncus
+              malesuada justo
+            </div>
+          </div>
+        </div>
+        <button class="provide-block__button">VISIT OUR BLOG</button>
+      </div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
