contact block, footer done

--- a/index.html
+++ b/index.html
@@ -241,6 +241,49 @@
         <button class="provide-block__button">VISIT OUR BLOG</button>
       </div>
     </div>
+    <div class="contact-block">
+      <div class="container">
+        <div class="title">Contac Us</div>
+        <div class="subtitle">We know what we need to do</div>
+        <div class="contact-block__img">
+          <div class="contact-block__img-small">
+            <img src="img/phone.png" alt="" />
+            <span>555-222-333</span>
+          </div>
+          <div class="contact-block__img-small">
+            <img src="img/location.png" alt="" />
+            <span>Here is some address</span>
+          </div>
+          <div class="contact-block__img-small">
+            <img src="img/mail.png" alt="" />
+            <span>somemail@hotmail.com</span>
+          </div>
+        </div>
+        <form class="contact-block__form">
+          <input
+            class="contact-block__input"
+            type="text"
+            placeholder="Full Name"
+          />
+          <input
+            class="contact-block__input"
+            type="email"
+            placeholder="Email"
+          />
+          <input class="contact-block__input" type="tel" placeholder="Number" />
+
+          <textarea
+            class="contact-block__textarea"
+            placeholder="Write your Message here..."
+          ></textarea>
+
+          <button class="contact-block__btn">Submit</button>
+        </form>
+      </div>
+    </div>
+    <footer class="footer">
+      <span>Copyright © Kenan Hamidic. All rights reserved.</span>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
