all adapt (first) done

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </div>
     </div>
     <div class="date-block">
+      <img class="date-block__top-img" src="img/buildings-black.png" alt="" />
       <div class="container date-block__container-main">
         <div class="date-block__left">
           <div class="date-block__small">
