main page anim done

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
       <div class="container">
         <div class="header__inner">
           <ul class="header__ul">
-            <li class="header__li">Home</li>
-            <li class="header__li">About Us</li>
-            <li class="header__li">Team</li>
+            <li class="header__li menu-home">Home</li>
+            <li class="header__li menu-about">About Us</li>
+            <li class="header__li menu-team">Team</li>
           </ul>
           <img class="header__img" src="img/logo.png" alt="" />
           <ul class="header__ul">
-            <li class="header__li">Services</li>
-            <li class="header__li">Blog</li>
-            <li class="header__li">Contact Us</li>
+            <li class="header__li menu-service">Services</li>
+            <li class="header__li menu-blog">Blog</li>
+            <li class="header__li menu-contact">Contact Us</li>
           </ul>
         </div>
         <div class="header__burger">
@@ -54,12 +54,12 @@
               <li class="header__burger-close">
                 <ion-icon name="close-outline"></ion-icon>
               </li>
-              <li class="header__li">Home</li>
-              <li class="header__li">About Us</li>
-              <li class="header__li">Team</li>
-              <li class="header__li">Services</li>
-              <li class="header__li">Blog</li>
-              <li class="header__li">Contact Us</li>
+              <li class="header__li menu-home">Home</li>
+              <li class="header__li menu-about">About Us</li>
+              <li class="header__li menu-team">Team</li>
+              <li class="header__li menu-service">Services</li>
+              <li class="header__li menu-blog">Blog</li>
+              <li class="header__li menu-contact">Contact Us</li>
               <hr />
               <li class="header__li contact-li">
                 (+380) 95 - 64 - 65 - 365
@@ -203,7 +203,7 @@
         <div class="provide-block__back-img">
           <img src="img/provide-ba.png" alt="" />
         </div>
-        <div class="title">We provide you everything</div>
+        <div class="title provide-title">We provide you everything</div>
         <div class="subtitle">
           Maybe not everything, but we provide you some stuff.
         </div>
@@ -244,7 +244,7 @@
     </div>
     <div class="contact-block">
       <div class="container">
-        <div class="title">Contac Us</div>
+        <div class="title contact-title">Contac Us</div>
         <div class="subtitle">We know what we need to do</div>
         <div class="contact-block__img">
           <div class="contact-block__img-small">
@@ -285,6 +285,7 @@
     <footer class="footer">
       <span>Copyright © Kenan Hamidic. All rights reserved.</span>
     </footer>
+    <ion-icon class="up-btn" name="chevron-up-circle-outline"></ion-icon>
     <script src="js/main.js"></script>
   </body>
 </html>
