--- a/index.html
+++ b/index.html
@@ -168,9 +168,18 @@
             <div class="team-block__position">
               Designer & Front-End Developer
             </div>
+            <div class="team-block__persone-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+              dolorem distinctio excepturi dolor perferendis delectus officia
+              perspiciatis numquam assumenda. Sint.
+            </div>
             <div class="team-block__social-media">
-              <img src="img/twitter.png" alt="" />
-              <img src="img/instagram.png" alt="" />
+              <a href="https://www.instagram.com/"
+                ><img src="img/twitter.png" alt=""
+              /></a>
+              <a href="https://www.twitter.com/"
+                ><img src="img/instagram.png" alt=""
+              /></a>
             </div>
           </div>
           <div class="team-block__persone">
@@ -179,9 +188,18 @@
             </div>
             <div class="team-block__name">Justin Twice</div>
             <div class="team-block__position">Founder & CEO</div>
+            <div class="team-block__persone-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+              dolorem distinctio excepturi dolor perferendis delectus officia
+              perspiciatis numquam assumenda. Sint.
+            </div>
             <div class="team-block__social-media">
-              <img src="img/twitter.png" alt="" />
-              <img src="img/instagram.png" alt="" />
+              <a href="https://www.instagram.com/"
+                ><img src="img/twitter.png" alt=""
+              /></a>
+              <a href="https://www.twitter.com/"
+                ><img src="img/instagram.png" alt=""
+              /></a>
             </div>
           </div>
           <div class="team-block__persone">
@@ -190,9 +208,18 @@
             </div>
             <div class="team-block__name">Antonio Never</div>
             <div class="team-block__position">Someone & Somewhere</div>
+            <div class="team-block__persone-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+              dolorem distinctio excepturi dolor perferendis delectus officia
+              perspiciatis numquam assumenda. Sint.
+            </div>
             <div class="team-block__social-media">
-              <img src="img/twitter.png" alt="" />
-              <img src="img/instagram.png" alt="" />
+              <a href="https://www.instagram.com/"
+                ><img src="img/twitter.png" alt=""
+              /></a>
+              <a href="https://www.twitter.com/"
+                ><img src="img/instagram.png" alt=""
+              /></a>
             </div>
           </div>
         </div>
