--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/blog.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,5 +27,47 @@
 
     <title>B&W Template</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <span><a href="index.html">Home</a></span>
+        <img src="img/logo.png" alt="" />
+        <span>Next</span>
+      </header>
+      <div class="blog-title">Latest news</div>
+      <div class="blog-inner">
+        <div class="blog-inner__cards">
+          <div class="blog-inner__small-card">
+            <div class="blog-inner__small-img"></div>
+            <div class="blog-inner__small-title">Post 1 Headline</div>
+            <div class="blog-inner__small-subtitle">
+              <span class="blog-inner__date"> Fri Feb 19 2019 </span>
+              <span class="blog-inner__com-count"> Comments (0) </span>
+            </div>
+          </div>
+          <div class="blog-inner__small-card">
+            <div class="blog-inner__small-img"></div>
+            <div class="blog-inner__small-title">Post 2 Headline</div>
+            <div class="blog-inner__small-subtitle">
+              <span class="blog-inner__date"> Fri Mar 8 2020 </span>
+              <span class="blog-inner__com-count"> Comments (0) </span>
+            </div>
+          </div>
+          <div class="blog-inner__small-card">
+            <div class="blog-inner__small-img"></div>
+            <div class="blog-inner__small-title">Post 3 Headline</div>
+            <div class="blog-inner__small-subtitle">
+              <span class="blog-inner__date"> Fri Jun 19 2020 </span>
+              <span class="blog-inner__com-count"> Comments (0) </span>
+            </div>
+          </div>
+        </div>
+        <div class="blog-inner__btn">Learn more</div>
+      </div>
+    </div>
+    <div class="error">
+      <span>Ooops... Error...</span>
+    </div>
+    <script src="js/blog.js"></script>
+  </body>
 </html>
