--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img class="header__img" src="img/logo.png" alt="" />
           <ul class="header__ul">
             <li class="header__li menu-service">Services</li>
-            <li class="header__li menu-blog">Blog</li>
+            <li class="header__li menu-blog"><a href="blog.html">Blog</a></li>
             <li class="header__li menu-contact">Contact Us</li>
           </ul>
         </div>
@@ -58,7 +58,7 @@
               <li class="header__li menu-about">About Us</li>
               <li class="header__li menu-team">Team</li>
               <li class="header__li menu-service">Services</li>
-              <li class="header__li menu-blog">Blog</li>
+              <li class="header__li menu-blog"><a href="blog.html">Blog</a></li>
               <li class="header__li menu-contact">Contact Us</li>
               <hr />
               <li class="header__li contact-li">
@@ -266,7 +266,9 @@
             </div>
           </div>
         </div>
-        <button class="provide-block__button">VISIT OUR BLOG</button>
+        <a href="blog.html">
+          <button class="provide-block__button">VISIT OUR BLOG</button>
+        </a>
       </div>
     </div>
     <div class="contact-block">
