done blog footer

--- a/blog.html
+++ b/blog.html
@@ -65,6 +65,9 @@
         <div class="blog-inner__btn">Learn more</div>
       </div>
     </div>
+    <footer class="footer">
+      <span>Copyright © Kenan Hamidic. All rights reserved.</span>
+    </footer>
     <div class="error">
       <span>Ooops... Error...</span>
     </div>
